--- a/Jaekyun/In-sample_Investment_Performance.ipynb
+++ b/Jaekyun/In-sample_Investment_Performance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1027,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1062,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1107,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1135,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1163,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1198,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1226,7 +1226,7 @@
        "Freq: W-FRI, Name: Adj Close, Length: 261, dtype: float64"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1256,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1268,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1277,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1287,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1303,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1354,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1388,7 +1388,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1400,7 +1400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1434,7 +1434,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1446,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1480,7 +1480,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1492,7 +1492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1526,7 +1526,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1539,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1573,7 +1573,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1585,7 +1585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1619,7 +1619,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1633,7 +1633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1667,7 +1667,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1681,7 +1681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1715,7 +1715,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1728,7 +1728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1737,7 +1737,7 @@
        "<Axes: title={'center': 'Weekly Returns'}>"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1759,7 +1759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1768,7 +1768,7 @@
        "<Axes: title={'center': 'Log Returns'}>"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1790,7 +1790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2083,7 +2083,7 @@
        "      <td>epo_MaxSharpe_weighted_15</td>\n",
        "      <td>0.005782</td>\n",
        "      <td>0.300665</td>\n",
-       "      <td>0.034834</td>\n",
+       "      <td>0.002116</td>\n",
        "      <td>0.251192</td>\n",
        "      <td>0.160467</td>\n",
        "      <td>1.157145</td>\n",
@@ -2114,6 +2114,30 @@
        "      <td>-0.268134</td>\n",
        "      <td>1.521309</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>S&amp;P 500 Index</td>\n",
+       "      <td>0.002116</td>\n",
+       "      <td>0.110054</td>\n",
+       "      <td>0.028093</td>\n",
+       "      <td>0.202585</td>\n",
+       "      <td>0.068490</td>\n",
+       "      <td>0.493886</td>\n",
+       "      <td>-0.318103</td>\n",
+       "      <td>0.565461</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -2141,9 +2165,11 @@
        "18     epo_Maxret_weighted_15        0.005797        0.301431        0.034570   \n",
        "19     epo_Maxret_weighted_30        0.003790        0.197089        0.028491   \n",
        "20     epo_Maxret_weighted_45        0.003909        0.203283        0.026699   \n",
-       "21  epo_MaxSharpe_weighted_15        0.005782        0.300665        0.034834   \n",
+       "21  epo_MaxSharpe_weighted_15        0.005782        0.300665        0.002116   \n",
        "22  epo_MaxSharpe_weighted_30        0.004144        0.215478        0.029863   \n",
        "23  epo_MaxSharpe_weighted_45        0.003907        0.203184        0.026686   \n",
+       "24              S&P 500 Index        0.002116        0.110054        0.028093   \n",
+       "25                        NaN             NaN             NaN             NaN   \n",
        "\n",
        "    StdDev(annual)  Sharpe Ratio(weekly)  Sharpe Ratio(annual)       MDD  \\\n",
        "0         0.215768              0.141743              1.022124 -0.304695   \n",
@@ -2170,6 +2196,8 @@
        "21        0.251192              0.160467              1.157145 -0.309756   \n",
        "22        0.215343              0.132322              0.954190 -0.308707   \n",
        "23        0.192433              0.139216              1.003904 -0.268134   \n",
+       "24        0.202585              0.068490              0.493886 -0.318103   \n",
+       "25             NaN                   NaN                   NaN       NaN   \n",
        "\n",
        "    Total Return  \n",
        "0       1.823722  \n",
@@ -2195,10 +2223,12 @@
        "20      1.522322  \n",
        "21      2.848144  \n",
        "22      1.619473  \n",
-       "23      1.521309  "
+       "23      1.521309  \n",
+       "24      0.565461  \n",
+       "25           NaN  "
       ]
      },
-     "execution_count": 105,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2210,7 +2240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -2429,7 +2459,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2447,7 +2477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2463,7 +2493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
